<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ll_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="24dp"
    android:paddingRight="24dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="82dp"
        android:text="@string/string_login"
        android:textColor="@color/title_text_color"
        android:textSize="32sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:orientation="horizontal">

        <wang.relish.textsample.ui.widget.SCAutoCompleteTextView
            android:id="@+id/act_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:completionThreshold="1"
            android:dropDownVerticalOffset="2dp"
            android:hint="@string/prompt_email"
            android:imeOptions="actionNext"
            android:inputType="phone|number"
            android:maxLines="1"
            android:padding="8dp"
            android:textColor="@color/title_text_color"
            android:textColorHint="@color/hint_text_color"
            android:textSize="16sp" />


        <ImageView
            android:id="@+id/iv_account_clear"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:padding="8dp"
            android:src="@drawable/ic_clear"
            android:visibility="invisible" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#D9D9D9" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_pwd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/prompt_password"
            android:imeOptions="actionSend"
            android:inputType="textPassword"
            android:maxLines="1"
            android:padding="8dp"
            android:textColor="@color/title_text_color"
            android:textColorHint="@color/hint_text_color"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/iv_pwd_clear"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center_vertical"
            android:padding="8dp"
            android:src="@drawable/ic_clear"
            android:visibility="invisible" />

        <ImageView
            android:id="@+id/iv_pwd_visibility"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_gravity="center_vertical"
            android:padding="6dp"
            tools:src="@drawable/ic_password_visible" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#D9D9D9" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/login_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:text="@string/prompt_sign_up"
            android:textColor="#666" />

        <TextView
            android:id="@+id/tv_forget_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="12dp"
            android:text="@string/prompt_forget"
            android:textColor="@color/forget_text_color" />

    </RelativeLayout>

    <TextView
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:background="@drawable/shape_corners_bg_login"
        android:gravity="center"
        android:text="@string/prompt_login"
        android:textColor="@color/white"
        android:textSize="@dimen/login_text_size" />

</LinearLayout>



